--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     - google-chrome-stable
 cache:
   directories:
-  - node_modules
+  - /frontend/node_modules
 branches:
   only:
   - master
