--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ branches:
   only:
   - master
 before_install:
-  - cd /frontend
+  - cd frontend
   - npm install -g @angular/cli@7.0.6
 script:
   - ng test -no-progress --browsers=ChromeHeadlessNoSandbox 
