--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
   - master
 before_install:
   - cd frontend
+  - npm install -g @angular/cli@7.1.4
 script:
   - ng test -no-progress --browsers=ChromeHeadlessNoSandbox 
   - ng e2e
