--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
 before_install:
   - cd frontend
   - npm install -g @angular/cli@7.1.4
+  - ng --version
 script:
   - ng test -no-progress --browsers=ChromeHeadlessNoSandbox 
   - ng e2e
