Add travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,13 @@ branches:
   - master
 before_install:
   - cd frontend
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm install -g @angular/cli@7.1.4
   - ng --version
+install:
+  - npm ci
 script:
   - ng test -no-progress --browsers=ChromeHeadlessNoSandbox 
   - ng e2e
