--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_install:
   - npm install -g @angular/cli@8.3.3
 script:
   - ng build
-  - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-  - ng e2e --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng test --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng e2e --no-progress --browsers=ChromeHeadlessNoSandbox
