--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - cd frontend
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm install -g @angular/cli@8.3.3
 script:
   - ng build
